# board-decker

./: .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vite.harness.config.ts  vitest.config.ts
.github/scripts/: tag-release-assets.sh
.github/workflows/: ci.yml  release.yml
e2e/: area-scope.spec.ts  kanban.spec.ts  mutations.spec.ts  security.spec.ts  updater.spec.ts
e2e/harness/: board.html  board.tsx  index.html  kanban.html  kanban.tsx  main.tsx
e2e/harness/mocks/: ado-invoke.ts  core.ts  plugin-process.ts  plugin-updater.ts
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: AppShell.tsx  AssigneePicker.tsx  Board.tsx  Column.tsx  CreateDialog.tsx  DetailPanel.tsx  Empty.tsx  HierarchyView.tsx  Onboarding.tsx  Sidebar.test.tsx  Sidebar.tsx  TopBar.tsx  UpdateButton.tsx  WorkItemCard.tsx
src/components/ui/: avatar.tsx  badge.tsx  button.tsx  confirm-dialog.tsx  context-menu.tsx  dialog.tsx  input.tsx  label.tsx  popover.tsx  select.tsx  spinner.tsx  textarea.tsx  toast.tsx
src/hooks/: keys.test.ts  keys.ts  mutations.ts  queries.ts  writePath.test.ts  writePath.ts
src/lib/: match.test.ts  match.ts  open.ts  queryClient.ts  sanitize.test.ts  sanitize.ts  utils.ts
src/lib/ado/: cap.test.ts  client.test.ts  client.ts  columns.test.ts  columns.ts  fields.ts  index.ts  invoke.test.ts  invoke.ts  mapper.test.ts  mapper.ts  relations.test.ts  relations.ts  types.ts  wiql.test.ts  wiql.ts
src/store/: board.ts  connection.ts
